# hipfort

./: CMakeLists.txt
lib/: CMakeLists.txt
